# tenderhack_backend

./: .gitignore  Dockerfile  Exception-402.pptx  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: aucton.py  dtos.py  llm.py
app/repositories/: file.py  file_handler.py  qs.py  text_analyser.py
app/routes/: auction.py
app/services/: __init__.py  auction.py  llm.py  req.py
app/test/: request.py
example_data/: example_9862366.json  example_9862374.json  example_9864708.json  example_9864771.json  example_9864870.json  example_9864884.json  example_9864977.json  Пример КС снятых с публикации.txt
example_data/json/: example_9862417.json  example_9864533.json  example_9864863.json
llm/: .test.py.swp  Dockerfile  controller.py  file_handler.py  index.json  rabbit_worker.py  requirements.txt  service.py  test.py  test_model.py  test_saiga.py
