[tool.poetry]
name = "hse-python-backend"
version = "0.1.0"
description = ""
authors = ["sleeter <lfmonsterfeed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
prometheus-fastapi-instrumentator = "^7.0.0"
spacy = "^3.8.2"
textract = "^1.6.5"
python-docx = "^1.1.2"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"